(main) working on sum shit

--- a/ios/libruh/Info.plist
+++ b/ios/libruh/Info.plist
@@ -48,5 +48,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Allow $(PRODUCT_NAME) to use the camera</string>
 </dict>
 </plist>
