--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "expo": "^50.0.17",
+    "expo-asset": "^9.0.2",
+    "expo-font": "^11.10.3",
+    "expo-status-bar": "^1.11.1",
     "librus-api": "^2.10.4",
     "react": "18.2.0",
     "react-native": "0.73.7",
