--- a/package.json
+++ b/package.json
@@ -18,16 +18,24 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.6.8",
+    "axios-cookiejar-support": "^5.0.1",
+    "cheerio": "^1.0.0-rc.12",
+    "directory-import": "^3.3.1",
     "expo": "^50.0.17",
     "expo-asset": "^9.0.2",
     "expo-font": "^11.10.3",
     "expo-status-bar": "^1.11.1",
     "librus-api": "^2.10.4",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.73.7",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-storage": "^1.0.1"
+    "react-native-storage": "^1.0.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
+    "tough-cookie": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -42,6 +50,7 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "lodash-es": "^4.17.21",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
