--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "librus": "^2.1.8",
     "lodash-es": "^4.17.21",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
