Move to expo so the app builds

--- a/app.json
+++ b/app.json
@@ -4,6 +4,9 @@
   "expo": {
     "experiments": {
       "tsconfigPaths": true
+    },
+    "ios": {
+      "bundleIdentifier": "pl.bruhsoftware.libruh"
     }
   }
 }
