--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -22,20 +22,22 @@
     "axios-cookiejar-support": "^5.0.1",
     "cheerio": "^1.0.0-rc.12",
     "directory-import": "^3.3.1",
-    "expo": "^50.0.17",
-    "expo-asset": "^9.0.2",
-    "expo-font": "^11.10.3",
-    "expo-status-bar": "^1.11.1",
+    "expo": "^49.0.23",
+    "expo-asset": "~8.10.1",
+    "expo-font": "~11.4.0",
+    "expo-status-bar": "~1.6.0",
     "librus-api": "^2.10.4",
     "lodash": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.73.7",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-storage": "^1.0.1",
+    "react-native": "0.72.10",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-storage": "^0.2.4",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "tough-cookie": "^4.1.3"
+    "tough-cookie": "^4.1.3",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -45,7 +47,7 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
-    "@types/react": "^18.2.6",
+    "@types/react": "~18.2.14",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
@@ -54,7 +56,7 @@
     "lodash-es": "^4.17.21",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "^5.1.3"
   },
   "engines": {
     "node": ">=18"
