(login) mamo to jest zajebiste

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
       "@ui/login/*": [
         "./components/login/*"
       ],
+      "@ui/about/*": [
+        "./components/about/*"
+      ],
       "@ui": [
         "./components/ui/Main.tsx"
       ],
