--- a/package.json
+++ b/package.json
@@ -24,20 +24,23 @@
     "directory-import": "^3.3.1",
     "expo": "^49.0.23",
     "expo-asset": "~8.10.1",
+    "expo-device": "~5.4.0",
     "expo-font": "~11.4.0",
+    "expo-font-loader": "^1.1.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "librus-api": "^2.10.4",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "2.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-storage": "^0.2.4",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "tough-cookie": "^4.1.3",
-    "expo-splash-screen": "~0.20.5"
+    "tough-cookie": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
