--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-font-loader": "^1.1.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.19",
     "librus-api": "^2.10.4",
     "lodash": "^4.17.21",
     "react": "18.2.0",
