--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "libruh",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "rncli:android": "react-native run-android",
@@ -41,7 +41,8 @@
     "react-native-storage": "^0.2.4",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "tough-cookie": "^4.1.3"
+    "tough-cookie": "^4.1.3",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
