--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   buildIPA:
     runs-on: macos-14
-    name: Build IPA (testing)
+    name: Build IPA test
     permissions:
       contents: write
     steps:
@@ -19,6 +19,7 @@ jobs:
           # Short name for current branch. For PRs, use target branch (base ref)
           GIT_BRANCH=${GITHUB_BASE_REF:-${GITHUB_REF#refs/heads/}}
           echo "GIT_BRANCH=$GIT_BRANCH" >> $GITHUB_ENV
+
       - name: Get current date
         id: date
         run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
@@ -32,7 +33,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '21'
 
       - name: Setup Yarn
         uses: threeal/setup-yarn-action@v2.0.0
@@ -43,6 +44,7 @@ jobs:
           echo "APPSTORE=true" >> .env
           echo "${{ secrets.SENTRY_PROPERTIES }}" > ./ios/sentry.properties
           git submodule update --init --recursive
+
       - name: alias yarn.cmd to yarn
         run: alias yarn.cmd="yarn"
 
@@ -51,9 +53,11 @@ jobs:
         run: |
           COMMIT_TAG=$(git describe --tags --abbrev=0)
           echo "COMMIT_TAG=${COMMIT_TAG}" >> $GITHUB_ENV
+
       - name: Display Commit Tag
         run: |
           echo "Commit Tag: $COMMIT_TAG"
+
       - name: Install dependencies
         uses: nick-fields/retry@v3
         with:
