--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,9 +34,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '21'
+          cache: 'yarn'
 
-      - name: Setup Yarn
-        uses: threeal/setup-yarn-action@v2.0.0
+      #- name: Setup Yarn
+      #  uses: threeal/setup-yarn-action@v2.0.0
 
       - name: 'Create env file'
         run: |
