--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
         run: cd ios && rm Podfile.lock && pod install --repo-update
 
       - name: Build
-        run: cd ios && xcodebuild -scheme Libruh -workspace example.xcworkspace -configuration Release clean archive -archivePath "build/Libruh.xcarchive" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
+        run: cd ios && xcodebuild -scheme libruh -workspace libruh.xcworkspace -configuration Release clean archive -archivePath "build/Libruh.xcarchive" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
 
       - name: Archive to IPA
         run: |
