--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "@types/node": "^20.12.8",
     "axios": "^1.6.8",
     "axios-cookiejar-support": "^5.0.1",
     "cheerio": "^1.0.0-rc.12",
@@ -27,6 +28,7 @@
     "expo-device": "~5.4.0",
     "expo-font": "~11.4.0",
     "expo-font-loader": "^1.1.0",
+    "expo-modules-autolinking": "~1.5.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.19",
@@ -35,7 +37,7 @@
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "2.1.0",
+    "react-native-reanimated": "3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-storage": "^0.2.4",
