--- a/package.json
+++ b/package.json
@@ -1,72 +1,42 @@
 {
   "name": "libruh",
-  "version": "0.0.2",
-  "private": true,
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "rncli:android": "react-native run-android",
-    "rncli:ios": "react-native run-ios",
-    "rncli:lint": "eslint .",
-    "rncli:start": "react-native start",
+    "ts:check": "tsc",
     "start": "expo start --go",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
-    "@types/node": "^20.12.8",
-    "axios": "^1.6.8",
-    "axios-cookiejar-support": "^5.0.1",
-    "cheerio": "^1.0.0-rc.12",
-    "directory-import": "^3.3.1",
-    "expo": "^49.0.23",
-    "expo-asset": "~8.10.1",
-    "expo-device": "~5.4.0",
-    "expo-font": "~11.4.0",
+    "@types/react": "~18.2.45",
+    "expo": "~50.0.17",
+    "expo-asset": "~9.0.2",
+    "expo-constants": "~15.4.6",
+    "expo-device": "~5.9.4",
+    "expo-font": "~11.10.3",
     "expo-font-loader": "^1.1.0",
-    "expo-modules-autolinking": "~1.5.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.19",
-    "librus-api": "^2.10.4",
-    "lodash": "^4.17.21",
+    "expo-modules-autolinking": "~1.10.0",
+    "expo-modules-core": "~1.11.13",
+    "expo-splash-screen": "~0.26.5",
+    "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.12",
     "react": "18.2.0",
-    "react-native": "0.72.10",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-storage": "^0.2.4",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6",
-    "tough-cookie": "^4.1.3",
-    "ts-node": "^10.9.2"
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-storage": "^1.0.1",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.73.21",
-    "@react-native/eslint-config": "0.73.2",
-    "@react-native/metro-config": "0.73.5",
-    "@react-native/typescript-config": "0.73.1",
-    "@types/react": "~18.2.14",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "librus": "^2.1.8",
-    "lodash-es": "^4.17.21",
-    "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
-    "typescript": "^5.1.3"
-  },
-  "engines": {
-    "node": ">=18"
+    "@babel/core": "^7.20.0"
   }
 }
