--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json",
   "compilerOptions": {
     "paths": {
       "@ui/login": [
@@ -36,5 +35,6 @@
         "./lib/librus/*"
       ],
     }
-  }
+  },
+  "extends": "expo/tsconfig.base"
 }
