--- a/package.json
+++ b/package.json
@@ -10,31 +10,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native/metro-config": "^0.74.83",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.45",
-    "expo": "~50.0.17",
-    "expo-asset": "~9.0.2",
-    "expo-constants": "~15.4.6",
-    "expo-device": "~5.9.4",
-    "expo-font": "~11.10.3",
+    "expo": "~51.0.2",
+    "expo-asset": "~10.0.6",
+    "expo-constants": "~16.0.1",
+    "expo-device": "~6.0.2",
+    "expo-font": "~12.0.4",
     "expo-font-loader": "^1.1.0",
-    "expo-modules-autolinking": "~1.10.0",
-    "expo-modules-core": "~1.11.13",
-    "expo-splash-screen": "~0.26.5",
-    "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.12",
+    "expo-modules-autolinking": "~1.11.0",
+    "expo-modules-core": "~1.12.10",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.11",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-storage": "^1.0.1",
-    "typescript": "^5.3.0"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
